--- a/configs/ECAPATDNN512_AAM.yaml
+++ b/configs/ECAPATDNN512_AAM.yaml
@@ -3,8 +3,8 @@ nOut: 256
 max_frames: 200
 batch_size: 200
 trainfunc: clova.aamsoftmax
-lr_decay: 0.75
-weight_decay: 5e-05
+n_mels: 80
+log_input: True
 max_seg_per_spk: 500
 augment: True
 save_path: exps/ECAPATDNN512_AAM
