--- a/configs/ResNetSE34L_AAM.yaml
+++ b/configs/ResNetSE34L_AAM.yaml
@@ -1,13 +1,14 @@
-model: custom.ECAPATDNN512
-nOut: 192
+model: clova.ResNetSE34L
+nOut: 256
 max_frames: 200
 batch_size: 256
 weight_decay: 2e-5
 trainfunc: clova.aamsoftmax
 scheduler: onecyclelr
-n_mels: 80
 log_input: True
 max_seg_per_spk: 500
 augment_noise: True
 augment_specaug: True
-save_path: exps/ECAPATDNN512_AAM2
+encoder_type: SAP
+save_path: exps/ResNetSE34L_AM
+
